Closed
Bug 234015
Opened 22 years ago
Closed 22 years ago
[FIXr]printing of fieldset that spans multiple pages fails
Categories
(Core :: Printing: Output, defect, P1)
Core
Printing: Output
Tracking
()
RESOLVED
FIXED
mozilla1.7beta
People
(Reporter: lancer, Assigned: bzbarsky)
References
Details
Attachments
(2 files)
|
2.08 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
|
967 bytes,
text/html
|
Details |
User-Agent:
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.5.1) Gecko/20031120
My page contains a fieldset (with legend) within a form. This fieldset contains a rather lengthy table
inside it, cause the fieldset to wrap across multiple pages when printing the document. Printing results
in an entirely blank page (no other part of the page prints). When I remove the content of the fieldset
bit by bit, printing is successful as soon as the fieldset does not wrap across multiple pages.
Reproducible: Always
Steps to Reproduce:
1. Make <fieldset> within a <form>
2. Add a lof of content in it (e.g. multi-row table)
3. Try to print, simply a blank page results.
Actual Results:
Blank page, not even the other content (Headers/Paragraphs) outside of the <fieldset> prints.
Expected Results:
Fieldset element should have been broken up across pages, like tables do.
| Assignee | ||
Comment 1•22 years ago
|
||
The basic problem is that nsCSSFrameConstructor::CreateContinuingFrame doesn't
know how to handle fieldset frames.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: MacOS X → All
Hardware: Macintosh → All
| Assignee | ||
Comment 2•22 years ago
|
||
| Assignee | ||
Updated•22 years ago
|
Attachment #141243 -
Flags: superreview?(dbaron)
Attachment #141243 -
Flags: review?(dbaron)
| Assignee | ||
Comment 3•22 years ago
|
||
Attachment #141243 -
Flags: superreview?(dbaron)
Attachment #141243 -
Flags: superreview+
Attachment #141243 -
Flags: review?(dbaron)
Attachment #141243 -
Flags: review+
| Assignee | ||
Updated•22 years ago
|
Assignee: core.printing → bzbarsky
Priority: -- → P1
Summary: printing of fieldset that spans multiple pages fails → [FIXr]printing of fieldset that spans multiple pages fails
Target Milestone: --- → mozilla1.7beta
Comment 4•22 years ago
|
||
*** Bug 234643 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 5•22 years ago
|
||
Fix checked in for 1.7b
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•