Make fieldset splitting work so fieldsets taller than a page print.  Bug 234015, r+sr=dbaron